--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,22 +6,25 @@ edition = "2021"
 
 [dependencies]
 # GPUI - UI Framework
-gpui = "0.2.2"
-gpui-component = "0.5.0"
+adabraka-ui = "0.3.5"
+# gpui = "0.2.2"
+# [patch.crates-io]
+gpui = {package = "adabraka-gpui", version = "0.5.1"}
+# gpui-component = "0.5.0"
 
 # Async Runtime
 tokio = { version = "1", features = ["full"] }
 async-trait = "0.1"
-futures = "0.3"
+futures = "0.3.32"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-toml = "0.9.11+spec-1.1.0"
+toml = "0.9.8"
 
 # Logging
 log = "0.4"
-env_logger = "0.11"
+env_logger = "0.11.9"
 
 # Error Handling
 anyhow = "1.0"
@@ -33,6 +36,7 @@ meval = "0.2"
 # Utilities
 once_cell = "1.19"
 gpui-component-assets = "0.5.1"
+
 
 # Windows-specific
 [target.'cfg(windows)'.dependencies]
