--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,8 @@ meval = "0.2"
 once_cell = "1.19"
 gpui-component-assets = "0.5.1"
 global-hotkey = "0.7.0"
+lnk = "0.6.3"
+dirs = "6.0.0"
 
 
 # Windows-specific
