Added the testing_implicit.rs and the testing_explicit.rs files to test the working of the implicit and explicit plugins. Implemented teh testing_implicit plugin.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ gpui-component-assets = "0.5.1"
 global-hotkey = "0.7.0"
 lnk = "0.6.3"
 dirs = "6.0.0"
+fuzzy-matcher = "0.3.7"
 
 
 # Windows-specific
