Added and implemented the ip address(both public and private) plugin as well as the functionality of copy to clipboard when the ip address is selected

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,9 @@ global-hotkey = "0.7.0"
 lnk = "0.6.3"
 dirs = "6.0.0"
 fuzzy-matcher = "0.3.7"
+local-ip-address = "0.6.10"
+public-ip = "0.2.2"
+arboard = "3.6.1"
 
 
 # Windows-specific
